--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bestpoin-Home</title>
-</head>
-<body>
+<% layout("layouts/app") %>
     <h1>Bestpoin Home</h1>
-</body>
-</html>
