--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
@@ -16,7 +16,26 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/places/create">New Place</a>
                 </li>
+            </ul>
 
+
+            <ul class="navbar-nav">
+                <% if(!currentUser){ %>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Register">Register</a>
+                    </li>
+                    <% } else {%>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout" onclick="
+                        event.preventDefault()
+                        document.getElementById('logout-form').submit()
+                        ">Logout</a>
+                            <form action="/logout" method="POST" id="logout-form" style="display: none;"></form>
+                        </li>
+                        <% } %>
             </ul>
         </div>
     </div>
