--- a/views/places/show.ejs
+++ b/views/places/show.ejs
@@ -15,50 +15,60 @@
                     <li class="list-group-item">
                         <%= place.location %>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item">Author:
+                        <%= place.author.username %>
+                    </li>
+                    <li class="list-group-item">Price:
                         <%= place.price %>
                     </li>
                 </ul>
-                <div class="card-body">
-                    <a href="/places/<%= place._id %>/edit" class="btn btn-warning text-white">Edit</a>
-                    <form action="/places/<%= place.id %>?_method=DELETE" method="POST"
-                        style="display: inline!important;">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-                </div>
+                <% if(currentUser && place.author.equals(currentUser._id)) {%>
+                    <div class="card-body">
+                        <a href="/places/<%= place._id %>/edit" class="btn btn-warning text-white">Edit</a>
+                        <form action="/places/<%= place.id %>?_method=DELETE" method="POST"
+                            style="display: inline!important;">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    </div>
+                    <% } %>
             </div>
         </div>
         <div class="col-6">
-            <h3>Leave a review</h3>
-            <form action="/places/<%= place._id %>/reviews" method="POST" class="validated-form mb-3" novalidate>
-                <div class="mb-3">
-                    <label for="rating">Rating</label>
-                    <input type="range" name="review[rating]" id="rating" min="1" max="5" class="form-range">
-                </div>
-                <div class="mb-3">
-                    <label for="body">Review</label>
-                    <textarea name="review[body]" id="body" cols="30" rows="5" class="form-control" required></textarea>
-                    <div class="invalid-feedback">
-                        please fill out this field.
+            <% if(currentUser){ %>
+                <h3>Leave a review</h3>
+                <form action="/places/<%= place._id %>/reviews" method="POST" class="validated-form mb-3" novalidate>
+                    <div class="mb-3">
+                        <label for="rating">Rating</label>
+                        <input type="range" name="review[rating]" id="rating" min="1" max="5" class="form-range">
                     </div>
-                </div>
-                <button type="submit" class="btn btn-success">Submit</button>
-            </form>
-            <% for(const review of place.reviews) { %>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h3 class="card-title">Rating :
-                            <%= review.rating %>
-                        </h3>
-                        <p class="card-text">
-                            <%= review.body %>
-                        </p>
-                        <form action="/places/<%= place._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST"
-                            style="display: inline!important;">
-                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
+                    <div class="mb-3">
+                        <label for="body">Review</label>
+                        <textarea name="review[body]" id="body" cols="30" rows="5" class="form-control"
+                            required></textarea>
+                        <div class="invalid-feedback">
+                            please fill out this field.
+                        </div>
                     </div>
-                </div>
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
                 <% } %>
+                    <% for(const review of place.reviews) { %>
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h3 class="card-title">Rating :
+                                    <%= review.rating %>
+                                </h3>
+                                <p class="card-text">
+                                    <%= review.body %>
+                                </p>
+                                <% if(currentUser && review.author.equals(currentUser._id)){ %>
+                                    <form action="/places/<%= place._id %>/reviews/<%= review._id %>?_method=DELETE"
+                                        method="POST" style="display: inline!important;">
+                                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                                    </form>
+                                    <% } %>
+                            </div>
+                        </div>
+                        <% } %>
         </div>
     </div>
