--- a/views/places/create.ejs
+++ b/views/places/create.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/app") %>
     <h1 class="text-center">Add Place</h1>
     <div class="col-6 offset-3">
-        <form action="/places" method="POST" class="validated-form" novalidate>
+        <form action="/places" method="POST" class="validated-form" novalidate enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
                 <input type="text" name="title" id="title" class="form-control" required>
@@ -31,8 +31,9 @@
                 </div>
             </div>
             <div class="mb-3">
-                <label for="image" class="form-label">Image URL</label>
-                <input type="text" name="image" id="image" class="form-control" required>
+                <label for="image" class="form-label">Image</label>
+                <input type="file" name="image" id="image" accept="image/*" class="form-control" multiple required>
+                <!-- <input type="text" name="image" id="image" class="form-control" required> -->
                 <div class="invalid-feedback">
                     Please provide a image URL.
                 </div>
