--- a/views/places/edit.ejs
+++ b/views/places/edit.ejs
@@ -1,45 +1,83 @@
 <% layout("layouts/app") %>
 
     <h1 class="text-center">Edit Place</h1>
-    <div class="col-6 offset-3">
-        <form action="/places/<%= place._id %>?_method=PUT" method="POST" class="validated-form" novalidate>
-            <div class="mb-3">
-                <label for="title" class="form-label">Title</label>
-                <input type="text" name="title" id="title" class="form-control" value="<%= place.title %>" required>
-                <div class="invalid-feedback">
-                    Please provide a title.
+    <div class="row mb-5">
+        <div class="col-6 <%= !place.images.length > 0 ? " offset-3" : "" %>">
+            <form action="/places/<%= place._id %>?_method=PUT" method="POST" class="validated-form" novalidate
+                enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" name="title" id="title" class="form-control" value="<%= place.title %>" required>
+                    <div class="invalid-feedback">
+                        Please provide a title.
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input type="text" name="location" id="location" class="form-control" value="<%= place.location %>"
-                    required>
-                <div class="invalid-feedback">
-                    Please provide a location.
+                <div class="mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" name="location" id="location" class="form-control" value="<%= place.location %>"
+                        required>
+                    <div class="invalid-feedback">
+                        Please provide a location.
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea name="description" id="description" class="form-control"
-                    required><%= place.description %></textarea>
-                <div class="invalid-feedback">
-                    Please provide a description.
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="description" id="description" class="form-control"
+                        required><%= place.description %></textarea>
+                    <div class="invalid-feedback">
+                        Please provide a description.
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="price" class="form-label">Price</label>
-                <input type="text" name="price" id="price" class="form-control" value="<%= place.price %>" required>
-                <div class="invalid-feedback">
-                    Please provide a price.
+                <div class="mb-3">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="text" name="price" id="price" class="form-control" value="<%= place.price %>" required>
+                    <div class="invalid-feedback">
+                        Please provide a price.
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="image" class="form-label">Image URL</label>
-                <input type="text" name="image" id="image" class="form-control" value="<%= place.image %>" required>
-                <div class="invalid-feedback">
-                    Please provide a image URL.
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image URL</label>
+                    <input type="file" name="image" id="image" accept="image/*" class="form-control" multiple>
+                    <!-- <input type="text" name="image" id="image" class="form-control" value="<%= place.image %>" required> -->
+                    <div class="invalid-feedback">
+                        Please provide a image URL.
+                    </div>
                 </div>
+                <button type="submit" class="btn btn-success">Save</button>
+            </form>
+        </div>
+        <% if(place.images.length> 0){ %>
+            <div class="col-6">
+                <h5 class="text-center">Delete Image</h5>
+                <div class="form-group form-check">
+                    <input type="checkbox" id="checkAll" class="form-check-input">
+                    <label for="checkAll" class="form-check-label">Check All</label>
+                </div>
+                <form action="/places/<%= place._id  %>/images?_method=DELETE" method="post" class="d-flex flex-wrap" >
+                    <% place.images.forEach((image, index)=> { %>
+                        <div class="col-md-4">
+                            <div class="card mb-3">
+                                <img src="/images/<%= image.filename %>" class="card-img-top">
+                            </div>
+                            <div class="card-body">
+                                <label class="custom-checkbox">
+                                    <input type="checkbox" name="images[]" value="<%= image.url %>">
+                                    <span class="custom-checkbox-text">Pilih</span>
+                                </label>
+                            </div>
+                        </div>
+                        <% }) %>
+                            <div class="w-100"></div>
+                            <button class="btn btn-danger" type="submit">Delete</button>
+                </form>
             </div>
-            <button type="submit" class="btn btn-success">Save</button>
-        </form>
+            <% } %>
     </div>
+    <script>
+        document.getElementById("checkAll").addEventListener("change", function () {
+            const checkboxes = document.getElementsByName("images[]")
+            for (let i = 0; i < checkboxes.length; i++) {
+                checkboxes[i].checked = this.checked
+            }
+        })
+    </script>
