--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -7,7 +7,13 @@
             <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="/images/<%= place.images[0].filename %>" alt="<%= place.title %>" class="img-fluid">
+                        <% if(place.images.length){ %>
+                            <img src="/images/<%= place.images[0].filename %>" alt="<%= place.title %>"
+                                class="img-fluid">
+                            <%} else { %>
+                                <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                    alt="<%= place.title %>" 
+                                    <% } %>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
